--- a/full_snp_sim_map.Rmd
+++ b/full_snp_sim_map.Rmd
@@ -176,7 +176,7 @@ case<-  list(50,350,100,300,150,250,200)
 contrl<-c(225,seq(50,400,by=50))
 case<-c(225,rev(seq(50,400,by=50)))
 contrl<-c(50,100,150,175,25)
-case<-  c(150,100,50,25,175)
+case<-  c(150,100,50,25,175)  #shoutd these be lists!!!!
 contrl<-c(50,50,100,25,100)
 case<-  c(50,100,50,100,25)
 #--------------------------------------------
